made some changes in the code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <nav>
-            <a href="#" class="logo"><img src="portfolio-dark-img/images/logo.png"></a>
+            <a href="#" class="logo"><img src="portfolio-img/logo.png"></a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Portfolio</a></li>
@@ -18,8 +18,8 @@
                 <li><a href="#">Contacts</a></li>
             </ul>
             <div class="toggle-btn">
-                <span>Light</span>
-                <img src="portfolio-dark-img/images/sun.png">
+                <span>Dark</span>
+                <img src="portfolio-img/moon.png">
             </div>
         </nav>
         <div class="content">
@@ -29,10 +29,10 @@
             <a href="#">Hire Me</a>
         </div>
         <div class="image-box">
-            <img src="portfolio-dark-img/images/2.png">
+            <img src="portfolio-img/mine.png">
             <div class="pattern">
-                <img src="portfolio-dark-img/images/background.png">
-                <img src="portfolio-dark-img/images/background.png">
+                <img src="portfolio-img/background.png">
+                <img src="portfolio-img/background.png">
             </div>
         </div>
     </div>
